# BCC402

./: CMakeList  CMakeLists.txt  README.md
sources/: CMakeLists  CMakeLists.txt
sources/estoque/: estoque.cpp  estoque.h
sources/item/: item.cpp  item.h  item.hpp
standalone/: CMakeLists  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  ut_estoque.cpp
